--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -11,6 +11,8 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "serverless-bundle": "^1.3.3",
+    "serverless-deployment-bucket": "^1.5.2",
+    "serverless-offline": "^8.5.0",
     "serverless-pseudo-parameters": "^2.5.0",
     "webpack": "^4.35.2"
   },
@@ -20,8 +22,12 @@
     "@middy/http-event-normalizer": "^2.5.7",
     "@middy/http-json-body-parser": "^2.5.7",
     "aws-sdk": "^2.1101.0",
+    "dotenv": "^16.0.0",
     "firebase-admin": "^10.0.2",
     "http-errors": "^2.0.0",
-    "mongodb": "^4.4.1"
+    "moment": "^2.29.1",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
+    "uuid": "^8.3.2"
   }
 }
