--- a/notification-service/iam/SendMailIAM.yml
+++ b/notification-service/iam/SendMailIAM.yml
@@ -1,8 +1,7 @@
 SendMailIAM:
   Effect: Allow
   Action:
-    - ses:SendEmail
-    - ses:SendRawEmail
+    - ses:*
     - logs:CreateLogGroup
     - logs:CreateLogStream
     - logs:PutLogEvents
