--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.0",
     "serverless-bundle": "^1.3.3",
     "serverless-deployment-bucket": "^1.5.2",
+    "serverless-dotenv-plugin": "^3.12.2",
     "serverless-offline": "^8.5.0",
     "serverless-pseudo-parameters": "^2.5.0",
     "webpack": "^4.35.2"
