--- a/notification-service/serverless.yml
+++ b/notification-service/serverless.yml
@@ -32,7 +32,7 @@ functions:
     events:
       - http:
           method: GET
-          path: /email-service/logs
+          path: /email-service/logs/all
           cors: true
   searchEmail:
     handler: src/handlers/searchEmail.handler
@@ -88,7 +88,7 @@ functions:
     events:
       - sqs:
           arn: ${self:custom.mailQueue.arn}
-          batchSize: 3
+          batchSize: 1
 
 custom:
   mailQueue:
